# serializer version: 1
# name: TestDjangoPropertiesToQ.test_array_property_as_string_on_persons
  '''
  SELECT "markettor_team"."id",
         "markettor_team"."uuid",
         "markettor_team"."organization_id",
         "markettor_team"."project_id",
         "markettor_team"."api_token",
         "markettor_team"."app_urls",
         "markettor_team"."name",
         "markettor_team"."slack_incoming_webhook",
         "markettor_team"."created_at",
         "markettor_team"."updated_at",
         "markettor_team"."anonymize_ips",
         "markettor_team"."completed_snippet_onboarding",
         "markettor_team"."has_completed_onboarding_for",
         "markettor_team"."ingested_event",
         "markettor_team"."autocapture_opt_out",
         "markettor_team"."autocapture_web_vitals_opt_in",
         "markettor_team"."autocapture_web_vitals_allowed_metrics",
         "markettor_team"."autocapture_exceptions_opt_in",
         "markettor_team"."autocapture_exceptions_errors_to_ignore",
         "markettor_team"."session_recording_opt_in",
         "markettor_team"."session_recording_sample_rate",
         "markettor_team"."session_recording_minimum_duration_milliseconds",
         "markettor_team"."session_recording_linked_flag",
         "markettor_team"."session_recording_network_payload_capture_config",
         "markettor_team"."session_replay_config",
         "markettor_team"."capture_console_log_opt_in",
         "markettor_team"."capture_performance_opt_in",
         "markettor_team"."surveys_opt_in",
         "markettor_team"."heatmaps_opt_in",
         "markettor_team"."session_recording_version",
         "markettor_team"."signup_token",
         "markettor_team"."is_demo",
         "markettor_team"."access_control",
         "markettor_team"."week_start_day",
         "markettor_team"."inject_web_apps",
         "markettor_team"."test_account_filters",
         "markettor_team"."test_account_filters_default_checked",
         "markettor_team"."path_cleaning_filters",
         "markettor_team"."timezone",
         "markettor_team"."data_attributes",
         "markettor_team"."person_display_name_properties",
         "markettor_team"."live_events_columns",
         "markettor_team"."recording_domains",
         "markettor_team"."primary_dashboard_id",
         "markettor_team"."extra_settings",
         "markettor_team"."modifiers",
         "markettor_team"."correlation_config",
         "markettor_team"."session_recording_retention_period_days",
         "markettor_team"."plugins_opt_in",
         "markettor_team"."opt_out_capture",
         "markettor_team"."event_names",
         "markettor_team"."event_names_with_usage",
         "markettor_team"."event_properties",
         "markettor_team"."event_properties_with_usage",
         "markettor_team"."event_properties_numerical",
         "markettor_team"."external_data_workspace_id",
         "markettor_team"."external_data_workspace_last_synced_at"
  FROM "markettor_team"
  WHERE "markettor_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestDjangoPropertiesToQ.test_array_property_as_string_on_persons.1
  '''
  SELECT "markettor_team"."id",
         "markettor_team"."uuid",
         "markettor_team"."organization_id",
         "markettor_team"."project_id",
         "markettor_team"."api_token",
         "markettor_team"."app_urls",
         "markettor_team"."name",
         "markettor_team"."slack_incoming_webhook",
         "markettor_team"."created_at",
         "markettor_team"."updated_at",
         "markettor_team"."anonymize_ips",
         "markettor_team"."completed_snippet_onboarding",
         "markettor_team"."has_completed_onboarding_for",
         "markettor_team"."ingested_event",
         "markettor_team"."autocapture_opt_out",
         "markettor_team"."autocapture_web_vitals_opt_in",
         "markettor_team"."autocapture_web_vitals_allowed_metrics",
         "markettor_team"."autocapture_exceptions_opt_in",
         "markettor_team"."autocapture_exceptions_errors_to_ignore",
         "markettor_team"."session_recording_opt_in",
         "markettor_team"."session_recording_sample_rate",
         "markettor_team"."session_recording_minimum_duration_milliseconds",
         "markettor_team"."session_recording_linked_flag",
         "markettor_team"."session_recording_network_payload_capture_config",
         "markettor_team"."session_replay_config",
         "markettor_team"."capture_console_log_opt_in",
         "markettor_team"."capture_performance_opt_in",
         "markettor_team"."surveys_opt_in",
         "markettor_team"."heatmaps_opt_in",
         "markettor_team"."session_recording_version",
         "markettor_team"."signup_token",
         "markettor_team"."is_demo",
         "markettor_team"."access_control",
         "markettor_team"."week_start_day",
         "markettor_team"."inject_web_apps",
         "markettor_team"."test_account_filters",
         "markettor_team"."test_account_filters_default_checked",
         "markettor_team"."path_cleaning_filters",
         "markettor_team"."timezone",
         "markettor_team"."data_attributes",
         "markettor_team"."person_display_name_properties",
         "markettor_team"."live_events_columns",
         "markettor_team"."recording_domains",
         "markettor_team"."primary_dashboard_id",
         "markettor_team"."extra_settings",
         "markettor_team"."modifiers",
         "markettor_team"."correlation_config",
         "markettor_team"."session_recording_retention_period_days",
         "markettor_team"."plugins_opt_in",
         "markettor_team"."opt_out_capture",
         "markettor_team"."event_names",
         "markettor_team"."event_names_with_usage",
         "markettor_team"."event_properties",
         "markettor_team"."event_properties_with_usage",
         "markettor_team"."event_properties_numerical",
         "markettor_team"."external_data_workspace_id",
         "markettor_team"."external_data_workspace_last_synced_at"
  FROM "markettor_team"
  WHERE "markettor_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestDjangoPropertiesToQ.test_array_property_as_string_on_persons.2
  '''
  SELECT "markettor_team"."id",
         "markettor_team"."uuid",
         "markettor_team"."organization_id",
         "markettor_team"."project_id",
         "markettor_team"."api_token",
         "markettor_team"."app_urls",
         "markettor_team"."name",
         "markettor_team"."slack_incoming_webhook",
         "markettor_team"."created_at",
         "markettor_team"."updated_at",
         "markettor_team"."anonymize_ips",
         "markettor_team"."completed_snippet_onboarding",
         "markettor_team"."has_completed_onboarding_for",
         "markettor_team"."ingested_event",
         "markettor_team"."autocapture_opt_out",
         "markettor_team"."autocapture_web_vitals_opt_in",
         "markettor_team"."autocapture_web_vitals_allowed_metrics",
         "markettor_team"."autocapture_exceptions_opt_in",
         "markettor_team"."autocapture_exceptions_errors_to_ignore",
         "markettor_team"."session_recording_opt_in",
         "markettor_team"."session_recording_sample_rate",
         "markettor_team"."session_recording_minimum_duration_milliseconds",
         "markettor_team"."session_recording_linked_flag",
         "markettor_team"."session_recording_network_payload_capture_config",
         "markettor_team"."session_replay_config",
         "markettor_team"."capture_console_log_opt_in",
         "markettor_team"."capture_performance_opt_in",
         "markettor_team"."surveys_opt_in",
         "markettor_team"."heatmaps_opt_in",
         "markettor_team"."session_recording_version",
         "markettor_team"."signup_token",
         "markettor_team"."is_demo",
         "markettor_team"."access_control",
         "markettor_team"."week_start_day",
         "markettor_team"."inject_web_apps",
         "markettor_team"."test_account_filters",
         "markettor_team"."test_account_filters_default_checked",
         "markettor_team"."path_cleaning_filters",
         "markettor_team"."timezone",
         "markettor_team"."data_attributes",
         "markettor_team"."person_display_name_properties",
         "markettor_team"."live_events_columns",
         "markettor_team"."recording_domains",
         "markettor_team"."primary_dashboard_id",
         "markettor_team"."extra_settings",
         "markettor_team"."modifiers",
         "markettor_team"."correlation_config",
         "markettor_team"."session_recording_retention_period_days",
         "markettor_team"."plugins_opt_in",
         "markettor_team"."opt_out_capture",
         "markettor_team"."event_names",
         "markettor_team"."event_names_with_usage",
         "markettor_team"."event_properties",
         "markettor_team"."event_properties_with_usage",
         "markettor_team"."event_properties_numerical",
         "markettor_team"."external_data_workspace_id",
         "markettor_team"."external_data_workspace_last_synced_at"
  FROM "markettor_team"
  WHERE "markettor_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestDjangoPropertiesToQ.test_array_property_as_string_on_persons.3
  '''
  SELECT "markettor_team"."id",
         "markettor_team"."uuid",
         "markettor_team"."organization_id",
         "markettor_team"."project_id",
         "markettor_team"."api_token",
         "markettor_team"."app_urls",
         "markettor_team"."name",
         "markettor_team"."slack_incoming_webhook",
         "markettor_team"."created_at",
         "markettor_team"."updated_at",
         "markettor_team"."anonymize_ips",
         "markettor_team"."completed_snippet_onboarding",
         "markettor_team"."has_completed_onboarding_for",
         "markettor_team"."ingested_event",
         "markettor_team"."autocapture_opt_out",
         "markettor_team"."autocapture_web_vitals_opt_in",
         "markettor_team"."autocapture_web_vitals_allowed_metrics",
         "markettor_team"."autocapture_exceptions_opt_in",
         "markettor_team"."autocapture_exceptions_errors_to_ignore",
         "markettor_team"."session_recording_opt_in",
         "markettor_team"."session_recording_sample_rate",
         "markettor_team"."session_recording_minimum_duration_milliseconds",
         "markettor_team"."session_recording_linked_flag",
         "markettor_team"."session_recording_network_payload_capture_config",
         "markettor_team"."session_replay_config",
         "markettor_team"."capture_console_log_opt_in",
         "markettor_team"."capture_performance_opt_in",
         "markettor_team"."surveys_opt_in",
         "markettor_team"."heatmaps_opt_in",
         "markettor_team"."session_recording_version",
         "markettor_team"."signup_token",
         "markettor_team"."is_demo",
         "markettor_team"."access_control",
         "markettor_team"."week_start_day",
         "markettor_team"."inject_web_apps",
         "markettor_team"."test_account_filters",
         "markettor_team"."test_account_filters_default_checked",
         "markettor_team"."path_cleaning_filters",
         "markettor_team"."timezone",
         "markettor_team"."data_attributes",
         "markettor_team"."person_display_name_properties",
         "markettor_team"."live_events_columns",
         "markettor_team"."recording_domains",
         "markettor_team"."primary_dashboard_id",
         "markettor_team"."extra_settings",
         "markettor_team"."modifiers",
         "markettor_team"."correlation_config",
         "markettor_team"."session_recording_retention_period_days",
         "markettor_team"."plugins_opt_in",
         "markettor_team"."opt_out_capture",
         "markettor_team"."event_names",
         "markettor_team"."event_names_with_usage",
         "markettor_team"."event_properties",
         "markettor_team"."event_properties_with_usage",
         "markettor_team"."event_properties_numerical",
         "markettor_team"."external_data_workspace_id",
         "markettor_team"."external_data_workspace_last_synced_at"
  FROM "markettor_team"
  WHERE "markettor_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestDjangoPropertiesToQ.test_array_property_as_string_on_persons.4
  '''
  SELECT "markettor_team"."id",
         "markettor_team"."uuid",
         "markettor_team"."organization_id",
         "markettor_team"."project_id",
         "markettor_team"."api_token",
         "markettor_team"."app_urls",
         "markettor_team"."name",
         "markettor_team"."slack_incoming_webhook",
         "markettor_team"."created_at",
         "markettor_team"."updated_at",
         "markettor_team"."anonymize_ips",
         "markettor_team"."completed_snippet_onboarding",
         "markettor_team"."has_completed_onboarding_for",
         "markettor_team"."ingested_event",
         "markettor_team"."autocapture_opt_out",
         "markettor_team"."autocapture_web_vitals_opt_in",
         "markettor_team"."autocapture_web_vitals_allowed_metrics",
         "markettor_team"."autocapture_exceptions_opt_in",
         "markettor_team"."autocapture_exceptions_errors_to_ignore",
         "markettor_team"."session_recording_opt_in",
         "markettor_team"."session_recording_sample_rate",
         "markettor_team"."session_recording_minimum_duration_milliseconds",
         "markettor_team"."session_recording_linked_flag",
         "markettor_team"."session_recording_network_payload_capture_config",
         "markettor_team"."session_replay_config",
         "markettor_team"."capture_console_log_opt_in",
         "markettor_team"."capture_performance_opt_in",
         "markettor_team"."surveys_opt_in",
         "markettor_team"."heatmaps_opt_in",
         "markettor_team"."session_recording_version",
         "markettor_team"."signup_token",
         "markettor_team"."is_demo",
         "markettor_team"."access_control",
         "markettor_team"."week_start_day",
         "markettor_team"."inject_web_apps",
         "markettor_team"."test_account_filters",
         "markettor_team"."test_account_filters_default_checked",
         "markettor_team"."path_cleaning_filters",
         "markettor_team"."timezone",
         "markettor_team"."data_attributes",
         "markettor_team"."person_display_name_properties",
         "markettor_team"."live_events_columns",
         "markettor_team"."recording_domains",
         "markettor_team"."primary_dashboard_id",
         "markettor_team"."extra_settings",
         "markettor_team"."modifiers",
         "markettor_team"."correlation_config",
         "markettor_team"."session_recording_retention_period_days",
         "markettor_team"."plugins_opt_in",
         "markettor_team"."opt_out_capture",
         "markettor_team"."event_names",
         "markettor_team"."event_names_with_usage",
         "markettor_team"."event_properties",
         "markettor_team"."event_properties_with_usage",
         "markettor_team"."event_properties_numerical",
         "markettor_team"."external_data_workspace_id",
         "markettor_team"."external_data_workspace_last_synced_at"
  FROM "markettor_team"
  WHERE "markettor_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestDjangoPropertiesToQ.test_array_property_as_string_on_persons.5
  '''
  SELECT "markettor_person"."id",
         "markettor_person"."created_at",
         "markettor_person"."properties_last_updated_at",
         "markettor_person"."properties_last_operation",
         "markettor_person"."team_id",
         "markettor_person"."properties",
         "markettor_person"."is_user_id",
         "markettor_person"."is_identified",
         "markettor_person"."uuid",
         "markettor_person"."version"
  FROM "markettor_person"
  WHERE (UPPER(("markettor_person"."properties" ->> 'urls')::text) LIKE UPPER('%["abcd"]%')
         AND "markettor_person"."properties" ? 'urls'
         AND NOT (("markettor_person"."properties" -> 'urls') = 'null'::jsonb)
         AND "markettor_person"."team_id" = 2)
  '''
# ---
# name: TestDjangoPropertiesToQ.test_array_property_as_string_on_persons.6
  '''
  SELECT "markettor_persondistinctid"."distinct_id"
  FROM "markettor_persondistinctid"
  WHERE ("markettor_persondistinctid"."person_id" = 2
         AND "markettor_persondistinctid"."team_id" = 2)
  ORDER BY "markettor_persondistinctid"."id" ASC
  '''
# ---
# name: TestDjangoPropertiesToQ.test_icontains_with_array_value
  '''
  SELECT "markettor_person"."uuid"
  FROM "markettor_person"
  WHERE (UPPER(("markettor_person"."properties" ->> '$key')::text) LIKE UPPER('%[''red'']%')
         AND "markettor_person"."properties" ? '$key'
         AND NOT (("markettor_person"."properties" -> '$key') = 'null'::jsonb)
         AND "markettor_person"."team_id" = 2)
  '''
# ---
# name: TestDjangoPropertiesToQ.test_icontains_with_array_value.1
  '''
  SELECT "markettor_person"."uuid"
  FROM "markettor_person"
  WHERE (UPPER(("markettor_person"."properties" ->> '$key')::text) LIKE UPPER('%red%')
         AND "markettor_person"."properties" ? '$key'
         AND NOT (("markettor_person"."properties" -> '$key') = 'null'::jsonb)
         AND "markettor_person"."team_id" = 2)
  '''
# ---
# name: TestDjangoPropertiesToQ.test_person_relative_date_parsing_with_invalid_date
  '''
  SELECT 1 AS "a"
  FROM "markettor_person"
  INNER JOIN "markettor_persondistinctid" ON ("markettor_person"."id" = "markettor_persondistinctid"."person_id")
  WHERE ("markettor_persondistinctid"."distinct_id" = 'example_id'
         AND "markettor_person"."team_id" = 2
         AND ("markettor_person"."properties" -> 'created_at') > '["2m", "3d"]'::jsonb)
  LIMIT 1
  '''
# ---
# name: TestDjangoPropertiesToQ.test_person_relative_date_parsing_with_invalid_date.1
  '''
  SELECT 1 AS "a"
  FROM "markettor_person"
  INNER JOIN "markettor_persondistinctid" ON ("markettor_person"."id" = "markettor_persondistinctid"."person_id")
  WHERE ("markettor_persondistinctid"."distinct_id" = 'example_id'
         AND "markettor_person"."team_id" = 2
         AND ("markettor_person"."properties" -> 'created_at') > '"bazinga"'::jsonb)
  LIMIT 1
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_cohorts
  '''
  SELECT "markettor_cohort"."id",
         "markettor_cohort"."name",
         "markettor_cohort"."description",
         "markettor_cohort"."team_id",
         "markettor_cohort"."deleted",
         "markettor_cohort"."filters",
         "markettor_cohort"."query",
         "markettor_cohort"."version",
         "markettor_cohort"."pending_version",
         "markettor_cohort"."count",
         "markettor_cohort"."created_by_id",
         "markettor_cohort"."created_at",
         "markettor_cohort"."is_calculating",
         "markettor_cohort"."last_calculation",
         "markettor_cohort"."errors_calculating",
         "markettor_cohort"."is_static",
         "markettor_cohort"."groups"
  FROM "markettor_cohort"
  WHERE (NOT "markettor_cohort"."deleted"
         AND "markettor_cohort"."id" = 2
         AND "markettor_cohort"."team_id" = 2)
  ORDER BY "markettor_cohort"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_cohorts.1
  '''
  SELECT "markettor_person"."id",
         "markettor_person"."created_at",
         "markettor_person"."properties_last_updated_at",
         "markettor_person"."properties_last_operation",
         "markettor_person"."team_id",
         "markettor_person"."properties",
         "markettor_person"."is_user_id",
         "markettor_person"."is_identified",
         "markettor_person"."uuid",
         "markettor_person"."version"
  FROM "markettor_person"
  WHERE (((("markettor_person"."properties" -> 'url') = '"https://whatever.com"'::jsonb
           AND "markettor_person"."properties" ? 'url'
           AND NOT (("markettor_person"."properties" -> 'url') = 'null'::jsonb)
           AND ("markettor_person"."properties" -> 'bla') = '1'::jsonb
           AND "markettor_person"."properties" ? 'bla'
           AND NOT (("markettor_person"."properties" -> 'bla') = 'null'::jsonb)
           AND ((("markettor_person"."properties" -> 'bla') = '1'::jsonb
                 AND "markettor_person"."properties" ? 'bla'
                 AND NOT (("markettor_person"."properties" -> 'bla') = 'null'::jsonb))
                OR (("markettor_person"."properties" -> 'bla') = '2'::jsonb
                    AND "markettor_person"."properties" ? 'bla'
                    AND NOT (("markettor_person"."properties" -> 'bla') = 'null'::jsonb))))
          OR (("markettor_person"."properties" -> 'bla') = '3'::jsonb
              AND "markettor_person"."properties" ? 'bla'
              AND NOT (("markettor_person"."properties" -> 'bla') = 'null'::jsonb)))
         AND "markettor_person"."team_id" = 2)
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_cohorts.2
  '''
  SELECT "markettor_persondistinctid"."distinct_id"
  FROM "markettor_persondistinctid"
  WHERE ("markettor_persondistinctid"."person_id" = 2
         AND "markettor_persondistinctid"."team_id" = 2)
  ORDER BY "markettor_persondistinctid"."id" ASC
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_cohorts.3
  '''
  SELECT "markettor_persondistinctid"."distinct_id"
  FROM "markettor_persondistinctid"
  WHERE ("markettor_persondistinctid"."person_id" = 2
         AND "markettor_persondistinctid"."team_id" = 2)
  ORDER BY "markettor_persondistinctid"."id" ASC
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_cohorts_no_match
  '''
  SELECT "markettor_cohort"."id",
         "markettor_cohort"."name",
         "markettor_cohort"."description",
         "markettor_cohort"."team_id",
         "markettor_cohort"."deleted",
         "markettor_cohort"."filters",
         "markettor_cohort"."query",
         "markettor_cohort"."version",
         "markettor_cohort"."pending_version",
         "markettor_cohort"."count",
         "markettor_cohort"."created_by_id",
         "markettor_cohort"."created_at",
         "markettor_cohort"."is_calculating",
         "markettor_cohort"."last_calculation",
         "markettor_cohort"."errors_calculating",
         "markettor_cohort"."is_static",
         "markettor_cohort"."groups"
  FROM "markettor_cohort"
  WHERE (NOT "markettor_cohort"."deleted"
         AND "markettor_cohort"."id" = 2
         AND "markettor_cohort"."team_id" = 2)
  ORDER BY "markettor_cohort"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_cohorts_no_match.1
  '''
  SELECT "markettor_person"."id",
         "markettor_person"."created_at",
         "markettor_person"."properties_last_updated_at",
         "markettor_person"."properties_last_operation",
         "markettor_person"."team_id",
         "markettor_person"."properties",
         "markettor_person"."is_user_id",
         "markettor_person"."is_identified",
         "markettor_person"."uuid",
         "markettor_person"."version"
  FROM "markettor_person"
  WHERE (((("markettor_person"."properties" -> 'url') = '"https://whatever.com"'::jsonb
           AND "markettor_person"."properties" ? 'url'
           AND NOT (("markettor_person"."properties" -> 'url') = 'null'::jsonb)
           AND ("markettor_person"."properties" -> 'bla') = '1'::jsonb
           AND "markettor_person"."properties" ? 'bla'
           AND NOT (("markettor_person"."properties" -> 'bla') = 'null'::jsonb)
           AND ("markettor_person"."properties" -> 'bla') = '1'::jsonb
           AND "markettor_person"."properties" ? 'bla'
           AND NOT (("markettor_person"."properties" -> 'bla') = 'null'::jsonb)
           AND ("markettor_person"."properties" -> 'bla') = '2'::jsonb
           AND "markettor_person"."properties" ? 'bla'
           AND NOT (("markettor_person"."properties" -> 'bla') = 'null'::jsonb))
          OR (("markettor_person"."properties" -> 'bla') = '3'::jsonb
              AND "markettor_person"."properties" ? 'bla'
              AND NOT (("markettor_person"."properties" -> 'bla') = 'null'::jsonb)))
         AND "markettor_person"."team_id" = 2)
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_cohorts_no_match.2
  '''
  SELECT "markettor_persondistinctid"."distinct_id"
  FROM "markettor_persondistinctid"
  WHERE ("markettor_persondistinctid"."person_id" = 2
         AND "markettor_persondistinctid"."team_id" = 2)
  ORDER BY "markettor_persondistinctid"."id" ASC
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts
  '''
  SELECT "markettor_cohort"."id",
         "markettor_cohort"."name",
         "markettor_cohort"."description",
         "markettor_cohort"."team_id",
         "markettor_cohort"."deleted",
         "markettor_cohort"."filters",
         "markettor_cohort"."query",
         "markettor_cohort"."version",
         "markettor_cohort"."pending_version",
         "markettor_cohort"."count",
         "markettor_cohort"."created_by_id",
         "markettor_cohort"."created_at",
         "markettor_cohort"."is_calculating",
         "markettor_cohort"."last_calculation",
         "markettor_cohort"."errors_calculating",
         "markettor_cohort"."is_static",
         "markettor_cohort"."groups"
  FROM "markettor_cohort"
  WHERE (NOT "markettor_cohort"."deleted"
         AND "markettor_cohort"."id" = 2
         AND "markettor_cohort"."team_id" = 2)
  ORDER BY "markettor_cohort"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.1
  '''
  SELECT "markettor_cohort"."id",
         "markettor_cohort"."name",
         "markettor_cohort"."description",
         "markettor_cohort"."team_id",
         "markettor_cohort"."deleted",
         "markettor_cohort"."filters",
         "markettor_cohort"."query",
         "markettor_cohort"."version",
         "markettor_cohort"."pending_version",
         "markettor_cohort"."count",
         "markettor_cohort"."created_by_id",
         "markettor_cohort"."created_at",
         "markettor_cohort"."is_calculating",
         "markettor_cohort"."last_calculation",
         "markettor_cohort"."errors_calculating",
         "markettor_cohort"."is_static",
         "markettor_cohort"."groups"
  FROM "markettor_cohort"
  WHERE (NOT "markettor_cohort"."deleted"
         AND "markettor_cohort"."id" = 2
         AND "markettor_cohort"."team_id" = 2)
  ORDER BY "markettor_cohort"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.2
  '''
  SELECT "markettor_cohort"."id",
         "markettor_cohort"."name",
         "markettor_cohort"."description",
         "markettor_cohort"."team_id",
         "markettor_cohort"."deleted",
         "markettor_cohort"."filters",
         "markettor_cohort"."query",
         "markettor_cohort"."version",
         "markettor_cohort"."pending_version",
         "markettor_cohort"."count",
         "markettor_cohort"."created_by_id",
         "markettor_cohort"."created_at",
         "markettor_cohort"."is_calculating",
         "markettor_cohort"."last_calculation",
         "markettor_cohort"."errors_calculating",
         "markettor_cohort"."is_static",
         "markettor_cohort"."groups"
  FROM "markettor_cohort"
  WHERE (NOT "markettor_cohort"."deleted"
         AND "markettor_cohort"."id" = 2
         AND "markettor_cohort"."team_id" = 2)
  ORDER BY "markettor_cohort"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.3
  '''
  SELECT "markettor_cohort"."id",
         "markettor_cohort"."name",
         "markettor_cohort"."description",
         "markettor_cohort"."team_id",
         "markettor_cohort"."deleted",
         "markettor_cohort"."filters",
         "markettor_cohort"."query",
         "markettor_cohort"."version",
         "markettor_cohort"."pending_version",
         "markettor_cohort"."count",
         "markettor_cohort"."created_by_id",
         "markettor_cohort"."created_at",
         "markettor_cohort"."is_calculating",
         "markettor_cohort"."last_calculation",
         "markettor_cohort"."errors_calculating",
         "markettor_cohort"."is_static",
         "markettor_cohort"."groups"
  FROM "markettor_cohort"
  WHERE (NOT "markettor_cohort"."deleted"
         AND "markettor_cohort"."id" = 2
         AND "markettor_cohort"."team_id" = 2)
  ORDER BY "markettor_cohort"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.4
  '''
  SELECT "markettor_person"."id",
         "markettor_person"."created_at",
         "markettor_person"."properties_last_updated_at",
         "markettor_person"."properties_last_operation",
         "markettor_person"."team_id",
         "markettor_person"."properties",
         "markettor_person"."is_user_id",
         "markettor_person"."is_identified",
         "markettor_person"."uuid",
         "markettor_person"."version"
  FROM "markettor_person"
  WHERE (NOT ((("markettor_person"."properties" -> 'bla') = '1'::jsonb
               AND "markettor_person"."properties" ? 'bla'
               AND NOT (("markettor_person"."properties" -> 'bla') = 'null'::jsonb))
              OR (("markettor_person"."properties" -> 'bla') = '2'::jsonb
                  AND "markettor_person"."properties" ? 'bla'
                  AND NOT (("markettor_person"."properties" -> 'bla') = 'null'::jsonb)))
         AND NOT ((("markettor_person"."properties" -> 'bla') = '3'::jsonb
                   AND "markettor_person"."properties" ? 'bla'
                   AND NOT (("markettor_person"."properties" -> 'bla') = 'null'::jsonb))
                  OR (("markettor_person"."properties" -> 'bla') = '4'::jsonb
                      AND "markettor_person"."properties" ? 'bla'
                      AND NOT (("markettor_person"."properties" -> 'bla') = 'null'::jsonb)))
         AND ("markettor_person"."properties" -> 'other') = '1'::jsonb
         AND "markettor_person"."properties" ? 'other'
         AND NOT (("markettor_person"."properties" -> 'other') = 'null'::jsonb)
         AND "markettor_person"."team_id" = 2)
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.5
  '''
  SELECT "markettor_persondistinctid"."distinct_id"
  FROM "markettor_persondistinctid"
  WHERE ("markettor_persondistinctid"."person_id" = 2
         AND "markettor_persondistinctid"."team_id" = 2)
  ORDER BY "markettor_persondistinctid"."id" ASC
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.6
  '''
  SELECT "markettor_persondistinctid"."distinct_id"
  FROM "markettor_persondistinctid"
  WHERE ("markettor_persondistinctid"."person_id" = 2
         AND "markettor_persondistinctid"."team_id" = 2)
  ORDER BY "markettor_persondistinctid"."id" ASC
  '''
# ---
